--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,8 @@ p,h1,h2,h3,h4,h5,h6 {
 
 img {
     display: block;
+    width: 100%;
+    height: auto;
 }
 
 
@@ -53,6 +55,12 @@ img {
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
     padding: 16px 0;
+}
+
+@media (min-width: 768px) {
+    .header{
+        padding: 0;
+    }
 }
 
 .header-container {
@@ -118,7 +126,7 @@ img {
 
 
 .current {
-    position:relative;
+    position: relative;
     color:#404BBF;
 }
 
@@ -152,27 +160,59 @@ img {
     height: 24px;
 }
 
+@media (min-width: 768px) {
+    .mobile-menu-button{
+        display: none;
+    }
+}
+
 .address {
     font-style:normal;
     margin-left: auto;
     display: none;
 }
+
+@media (min-width: 768px) {
+    .address{
+        display: block;   
+    }
+    .header-menu-list {
+        display: flex;
+    }
+
+    
+}
 .header-cont-list {
     display: flex;
-    gap: 40px;
-    margin-left: auto;
+    gap: 12px;
+    /* gap: 40px; */
+    /* margin-left: auto; */
+    flex-direction: column;
 }
+
 
 
 .header-cont-link {
     font-weight: 400;
-    font-size: 16px;
+    font-size: 12px;
+    /* font-size: 16px; */
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media (min-width: 1158px) {
+    .header-cont-list {
+        flex-direction: row;
+        gap: 40px;
+    }
+
+    .header-cont-link {
+        font-size: 16px;
+    }
 }
 
 .header-cont-link:focus,
@@ -331,6 +371,14 @@ img {
     gap:72px;
 }
 
+@media (min-width: 768px) {
+    .features-menu-list{
+        flex-direction: row;
+        flex-wrap: wrap;
+
+    }
+}
+
 
 .menu-title {
     font-weight: 700;
@@ -370,27 +418,50 @@ img {
 @media (min-width: 1158px) {
     .menu-text{
             font-weight: 400;
+            font-size: 20px;
+    }
+    .features-menu-item {
+        width: calc((100% - 72px) / 4);
+    }
+        .features-menu-list {
+            flex-wrap: nowrap;
+        }
+
+
+}
+
+@media (min-width: 768px) {
+    .features-menu-item {
+            width: calc((100% - 24px) / 2);
+        }
+    .features-menu-list{
+        gap: 72px 24px;
     }
 
 }
 
 
-/* .features-menu-item {
-    width: calc((100% - 3 * 24px) / 4);
-} */
-
 .features-menu-icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 112px;
-    background-color: #f4f4fd;
-    border-radius: 4px ;
-    border:1px solid #8e8f99;
-    margin-bottom: 8px;
     display: none;
+}
+
+
+
+@media (min-width: 1158px) {
+    .features-menu-icon{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 112px;
+        background-color: #f4f4fd;
+        border-radius: 4px;
+        border: 1px solid #8e8f99;
+        margin-bottom: 8px;
+        
+    }
 
 }
+
 
 
 
@@ -420,6 +491,18 @@ img {
     gap: 72px; 
     justify-content: center;
     flex-direction: column;
+
+}
+
+@media (min-width: 768px) {
+    .team-menu{
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 64px 24px;
+
+    }
+
 }
 
 .team-menu-list {
@@ -506,12 +589,38 @@ img {
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
-    
+    flex-direction: column;
+ 
+}
+@media (min-width: 768px) {
+    .portfolio-menu{
+        flex-direction: row;
+        gap: 72px 24px;
+    }
+}
+.portfolio-menu-item {
+    width: 100%;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    background: #fff;
 }
 
-.portfolio-menu-item {
-    width: calc((100% - 48px) / 3);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media (min-width: 768px) {
+    .portfolio-menu-item{
+        width: calc((100% - 24px) / 2);
+    }  
+}
+
+@media (min-width: 1158px) {
+    .portfolio-menu-item {
+        width: calc((100% - 48px) / 3);
+        box-shadow: none;
+
+    }
+    .portfolio-menu{
+        gap: 48px 24px;
+    }
+
 }
 
 .portfolio-menu-item:hover {
@@ -562,19 +671,73 @@ img {
 
 .footer {
     background-color:#2e2f42;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 
-.footer .container {
-    display: flex;
-    align-items: baseline;
+
+
+@media (min-width: 1158px) {
+    .footer{
+            padding-top: 100px;
+            padding-bottom: 100px;
+
+    }
 }
+
+.finalflex {
+    display: flex;
+    /* align-items: baseline; */
+    align-items: center;
+    flex-direction: column;
+    gap: 72px;
+}
+
+@media (min-width: 768px) {
+    .finalflex{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .logo-text-wrap{
+        width: 264px;
+    }
+}
+
+
+
 
 .logo-text-wrap {
-    align-items: baseline;
-    margin-right: 120px;
+    /* margin-right: 120px; */
+    text-align: center;
 }
+
+@media (min-width: 768px) {
+    .finalflex {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 72px 24px;
+        padding: 0 108px;
+    }
+
+    .logo-text-wrap {
+        width: 264px;
+        text-align: left;
+
+    }
+}
+
+@media (min-width: 1158px) {
+    .logo-text-wrap{
+        margin-right: 120px;
+    }
+    .finalflex {
+        padding: 0 16px;
+        gap: 0;
+        align-items: baseline;
+    }
+}
+
+
 
 .footer-logo {
     font-family: "Raleway", sans-serif;
@@ -596,6 +759,7 @@ img {
     letter-spacing: 0.02em;
     color: #f4f4fd;
     max-width: 264px;
+    text-align: left;
 }
 
 .accent-footer {
@@ -648,9 +812,19 @@ img {
 }
 
 .social-wrap {
-    margin-right: auto;
+    /* margin-right: auto; */
+    display: flex;
+    flex-direction: column;
 }
-.modal-overlay{
+
+@media (min-width: 1158px) {
+    .social-wrap{
+        margin-right: auto;
+
+    }
+}
+
+.modal-overlay {
     top: 0;
     left: 0;
     width: 100%;
@@ -663,11 +837,11 @@ img {
     pointer-events: none;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
     z-index: 999;
-    position: fixed
+    position: fixed;
 
 }
 
-.modal-overlay.is-open{
+.modal-overlay-is-open {
     opacity: 1;
     pointer-events: auto;
     top: 0;
@@ -680,13 +854,13 @@ img {
     align-items: center;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     z-index: 999;
-    position: fixed
+    position: fixed;
 }
 
 .modal {
     transform: translate(-50%, -50%);
     border-radius: 4px;
-    width: 408px;
+    width: 288px;
     min-height: 584px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background: #fcfcfc;
@@ -696,6 +870,13 @@ img {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
     padding: 72px 24px 24px 24px;
 }
+
+@media (min-width: 768px) {
+    .modal {
+        width: 408px;
+    }
+}
+
 .form-title{
     font-weight: 500;
     font-size: 16px;
@@ -715,15 +896,14 @@ img {
 }
 
 .form-label{
-
     font-weight: 400;
     font-size: 12px;
     line-height: 117%;
     letter-spacing: 0.04em;
     color: #8e8f99;
-    display: block;
+    display: flex;
     margin-bottom: 4px;
-    
+    align-items: center;
 }
 
 .form-link{
@@ -770,12 +950,7 @@ img {
 }
 
 .close-button-icon {
-    border-radius: 4px;
-    width: 24px;
-    height: 24px;
-    padding: 0 0 0 24px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    top: 24px;
 }
 
 
@@ -850,6 +1025,7 @@ img {
     align-items: center;
     justify-content: center;
     fill: transparent;
+    flex-shrink: 0;
 }
 
 
@@ -886,22 +1062,37 @@ img {
 }
 
 
+
 .form-container-text{
     margin-bottom: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #ffffff;
+    text-align: center;
 }
 
 .form-container-form{
     display: flex;
     gap: 24px;
+    flex-direction: column;
+    align-items: center;
+}
+@media (min-width: 768px) {
+    .form-container-form{
+        flex-direction: row;
+        align-items: left;
+    }
+    .form-container-text{
+        text-align: left;
+    } 
+
 
 }
 
 .form-container-input{
-    width: 264px;
+    /* width: 264px; */
+    width: 288px;
     height: 40px;
     border: 1px solid #ffffff;
     background-color: transparent;
@@ -913,6 +1104,13 @@ img {
     border-radius: 4px;
     color: #ffffff;
     
+}
+
+@media (min-width: 768px) {
+    .form-container-input{
+        width: 264px;
+    }
+
 }
 
 .form-container-form>button{
@@ -952,7 +1150,7 @@ img {
     margin: 4px;
 }
 .form-container-svg{
-    color:#ffffff;
+    fill:#ffffff;
 }
 
 
@@ -968,3 +1166,90 @@ img {
         padding-bottom: 120px;
     }
 }
+
+.mobile-menu{
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: 9999;
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    padding: 72px 16px 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+
+.icon-list-mobile-menu {
+    display: flex;
+    gap: 40px;
+
+}
+
+.icon-item-mobile-menu {
+    width: 40px;
+    height: 40px;
+}
+
+.icon-link-mobile-menu {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-link-mobile-menu:hover,
+.icon-link-mobile-menu:focus {
+    background-color: #31d0aa;
+}
+
+
+.icon-icon-mobile-menu {
+    width: 24px;
+    height: 24px;
+    height: 24px;
+    fill: #f4f4fd;
+}
+
+
+.mobile-menu-list-link{
+font-family: "Roboto",
+sans-serif;
+font-weight: 700;
+font-size: 36px;
+line-height: 111%;
+letter-spacing: 0.02em;
+color: #2e2f42;}
+
+.mobile-menu-list{
+    margin-bottom: auto;
+}
+
+.mobile-menu-adress-list{
+    margin-bottom: 48px;
+}
+
+.mobile-menu-list-item{
+    margin-bottom: 40px;
+}
+
+.mobile-menu-adress-item{
+font-family: "Roboto",
+sans-serif;
+font-weight: 500;
+font-size: 20px;
+line-height: 120%;
+letter-spacing: 0.02em;
+color: #434455;
+padding-bottom: 24px;
+}
+
