--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,7 @@ img {
     display: flex;
     background-color: transparent;
     border: none;
+    padding: 0;
 }
 
 @media (min-width: 768px) {
