--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ a {
 }
 
 .container {
-    max-width: 320x;
+    max-width: 320px;
     padding: 0 16px;
     margin: 0 auto;
 }
@@ -300,7 +300,7 @@ img {
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
-    max-width: 496px;
+    max-width: 216px;
     margin: 0 auto;
     margin-bottom: 72px;
 }
@@ -435,7 +435,6 @@ img {
 @media (min-width: 1158px) {
     .menu-text{
             font-weight: 400;
-            font-size: 20px;
     }
     .features-menu-item {
         width: calc((100% - 72px) / 4);
@@ -715,6 +714,7 @@ img {
     .finalflex{
         flex-direction: row;
         flex-wrap: wrap;
+        align-items: baseline;
     }
     .logo-text-wrap{
         width: 264px;
@@ -827,6 +827,13 @@ img {
     letter-spacing: 0.02em;
     color: #fff;
     margin-bottom: 16px;
+    text-align: center;
+}
+
+@media(min-width: 768px){
+    .social-title{
+        text-align: left;
+    }
 }
 
 .social-wrap {
